# mor-reproduce

./: .gitignore  README.md  pyproject.toml  requirements.txt
artifacts/: data_validation.json  environment.json  overfit_fp32.json  sft_dataset_statistics.json  sft_overfit_trainset_eval.json  sft_task_examples.md  sid_validation.json
artifacts/refactor/: baseline.json
artifacts/source_matrix/: SOURCE_MATRIX.md
configs/: ds_rl.json  ds_sft.json  eval_0.5b.yaml  rl.yaml  rl_0.5b_official.yaml  rl_0.5b_official_smoke.yaml  rl_0.5b_official_smoke_fp32.yaml  rl_0.5b_paper.yaml  rl_0.5b_paper_fp32.yaml  sft.yaml  sft_0.5b_official.yaml  sft_0.5b_smoke.yaml
configs/data/: amazon23-industrial.yaml  amazon23.yaml
configs/eval/: base.yaml  default.yaml  min_smoke.yaml
configs/model/: qwen2.5-0.5b.yaml
configs/rl/: base.yaml  min_smoke.yaml  official.yaml  paper.yaml  smoke.yaml
configs/sft/: base.yaml  min_smoke.yaml  smoke.yaml
configs/sid/: default.yaml
experiments/: NOTES.md  minionerec_0.5b_amazon23_results.md
experiments/eval_B0_base/: eval_metrics.json  generations.json
experiments/eval_B1_sft/: eval_metrics.json  generations.json
experiments/eval_B3_rl_official/: eval_metrics.json  generations.json
experiments/eval_B4_rl_paper/: eval_metrics.json  generations.json
minionerec/: __init__.py  cli.py  config.py  constants.py  constrained_decode_official.py  dataset.py  decode.py  distributed_utils.py  emb.py  eval.py  evaluate.py  evaluate_official.py  grpo_common.py  model.py  official_data.py  prep.py  reward.py  rewards_official.py  rl.py  rl_official.py  rl_paper.py  rqvae.py  sft.py  sft_official.py  tasks.py  tokenizer_official.py  train_rl.py  train_sft.py  util.py
minionerec/data/: adapters.py  amazon23.py  datasets.py  legacy_datasets.py  (+3 more)
scripts/: all.sh  download.sh  emb.sh  env.sh  env_mor.sh  eval.sh  eval_0.5b.sh  export_sft_final.py  monitor_rl.py  monitor_rl.sh  monitor_sft.py  monitor_sft.sh  prep.sh  rl.sh  rl_0.5b_official.sh  rl_0.5b_official_smoke.sh  rl_0.5b_paper.sh  sft.sh  sft_0.5b_official.sh  sft_0.5b_smoke.sh  sid.sh  tasks.sh
tests/: test_basic.py
(+42 files in other folders)
