[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "minionerec"
version = "0.2.0"
description = "MiniOneRec reproduction (4x V100, up to Qwen2.5-3B)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
include = ["minionerec*"]
exclude = ["data*", "scripts*", "configs*", "experiments*", "tests*", "checkpoints*", "src*"]
