[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "minionerec"
version = "0.3.0"
description = "MiniOneRec Amazon23 reproduction (behavior-preserving refactor)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.24.0",
  "scipy>=1.11.0",
  "scikit-learn>=1.3.0",
  "pandas>=2.0.0",
  "tqdm>=4.66.0",
  "pyyaml>=6.0",
  "sentencepiece>=0.2.0",
  "protobuf>=4.25.0",
  "einops>=0.7.0",
  "safetensors>=0.4.0",
  "huggingface_hub>=0.24.0",
  "datasets>=2.20.0",
  "accelerate>=0.34.0",
  "peft>=0.12.0",
  "transformers>=4.46.0",
  "trl>=0.12.0",
  "requests>=2.31.0",
  "matplotlib>=3.8.0",
  "gdown>=5.0.0",
  "wandb>=0.17.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
]
# torch / deepspeed: install per CUDA (see README). Example mor env: torch 2.7.1+cu118

[project.scripts]
mor = "minionerec.cli:main"

[tool.setuptools.packages.find]
include = ["minionerec*"]
exclude = ["data*", "scripts*", "configs*", "experiments*", "tests*", "checkpoints*", "src*", "artifacts*", "docs*", "archive*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "gpu: tests that require CUDA",
  "slow: longer integration smokes",
]
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
check_untyped_defs = false
